fix alignment of tick checkbox in special cases

--- a/src/less/elements/checkfield.less
+++ b/src/less/elements/checkfield.less
@@ -189,7 +189,7 @@
 				top:  50%;
 				left: 50%;
 				margin-top:  -26%;
-				margin-left: -36%;
+				margin-left: -33%;
 				border-radius: 0;
 				border-width: 0 0 0.12em 0.12em;
 				border-style: solid;
